<?xml version="1.0"?>
<package>
  <name>dh_robotics_ag145_description</name>
  <version>0.0.1</version>
  <description>DH-robotics ag145 Visual Models</description>
  <maintainer email="Renjie.ding@dh-robotics.com">Shelling Ding</maintainer>
  <author>Shelling Ding</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>
</package>
